backend_logs.txt

> backend@1.0.0 dev
> nodemon --exec ts-node src/server.ts

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/server.ts`[39m
/usr/src/app/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/repositories/user.repository.ts(5,29): error TS2694: Namespace '"/usr/src/app/node_modules/.prisma/client/default".Prisma' has no exported member 'UserCreateInput'.
src/repositories/user.repository.ts(28,41): error TS2694: Namespace '"/usr/src/app/node_modules/.prisma/client/default".Prisma' has no exported member 'UserUpdateInput'.

    at createTSError (/usr/src/app/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/usr/src/app/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/usr/src/app/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/usr/src/app/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/usr/src/app/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/usr/src/app/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19) {
  diagnosticCodes: [ 2694, 2694 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
